--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@shopify/restyle": "^2.4.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0"
   },
   "devDependencies": {
