--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,15 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
-  "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "@components": [
-        "src/components"
-      ],
-      "@hooks": [
-        "src/hook"
-      ],
-      "@routes": [
-        "src/routes"
-      ],
-      "@screens": [
-        "src/screen"
-      ],
-      "@theme": [
-        "src/theme"
-      ]
-    }
-  }
+	"extends": "@tsconfig/react-native/tsconfig.json",
+	"compilerOptions": {
+		"baseUrl": "./",
+		"paths": {
+			"@components": ["src/components"],
+			"@hooks": ["src/hook"],
+			"@routes": ["src/routes"],
+			"@screens": ["src/screen"],
+			"@theme": ["src/theme"],
+			"@domain": ["src/domain"],
+			"@api": ["src/api"]
+		}
+	}
 }
