--- a/package.json
+++ b/package.json
@@ -1,54 +1,56 @@
 {
-  "name": "NubbleApp",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@shopify/restyle": "^2.4.2",
-    "react": "18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-svg": "^13.14.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "babel-jest": "^29.2.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-native": "^4.1.0",
-    "husky": "^8.0.3",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
-  },
-  "engines": {
-    "node": ">=16"
-  }
+	"name": "NubbleApp",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"lint": "eslint .",
+		"start": "react-native start",
+		"test": "jest",
+		"prepare": "husky install",
+		"adb-reverse": "adb reverse tcp:3333 tcp:3333"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.2",
+		"@react-navigation/bottom-tabs": "^6.5.11",
+		"@react-navigation/native": "^6.1.9",
+		"@react-navigation/native-stack": "^6.9.17",
+		"@shopify/restyle": "^2.4.2",
+		"axios": "^1.6.2",
+		"react": "18.2.0",
+		"react-hook-form": "^7.43.9",
+		"react-native": "0.72.6",
+		"react-native-safe-area-context": "^4.7.4",
+		"react-native-screens": "^3.27.0",
+		"react-native-svg": "^13.14.0",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@babel/preset-env": "^7.20.0",
+		"@babel/runtime": "^7.20.0",
+		"@react-native/metro-config": "^0.72.11",
+		"@tsconfig/react-native": "^3.0.0",
+		"@types/react": "^18.0.24",
+		"@types/react-test-renderer": "^18.0.0",
+		"@typescript-eslint/eslint-plugin": "^6.11.0",
+		"@typescript-eslint/parser": "^6.11.0",
+		"babel-jest": "^29.2.1",
+		"babel-plugin-module-resolver": "^5.0.0",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-native": "^4.1.0",
+		"husky": "^8.0.3",
+		"jest": "^29.2.1",
+		"metro-react-native-babel-preset": "0.76.8",
+		"prettier": "^2.8.8",
+		"react-test-renderer": "18.2.0",
+		"typescript": "4.8.4"
+	},
+	"engines": {
+		"node": ">=16"
+	}
 }
