--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 			"@theme": ["src/theme"],
 			"@domain": ["src/domain"],
 			"@api": ["src/api"],
-			"@types": ["src/types"]
+			"@types": ["src/types"],
+			"@utils": ["src/utils"]
 		}
 	}
 }
