--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@react-navigation/native-stack": "^6.9.17",
 		"@shopify/restyle": "^2.4.2",
 		"axios": "^1.6.2",
+		"date-fns": "^3.2.0",
 		"react": "18.2.0",
 		"react-hook-form": "^7.43.9",
 		"react-native": "0.72.6",
