--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 			"@domain": ["src/domain"],
 			"@api": ["src/api"],
 			"@types": ["src/types"],
-			"@utils": ["src/utils"]
+			"@utils": ["src/utils"],
+			"@infra": ["src/infra"]
 		}
 	}
 }
