--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"android": "react-native run-android",
 		"ios": "react-native run-ios",
 		"lint": "eslint .",
-		"start": "react-native start",
+		"start": "react-native start --reset-cache",
 		"test": "jest",
 		"prepare": "husky install",
 		"adb-reverse": "adb reverse tcp:3333 tcp:3333"
