--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"react-native-safe-area-context": "^4.7.4",
 		"react-native-screens": "^3.27.0",
 		"react-native-svg": "^13.14.0",
-		"zod": "^3.22.4"
+		"zod": "^3.22.4",
+		"zustand": "^4.4.7"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
