--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 			"@api": ["src/api"],
 			"@types": ["src/types"],
 			"@utils": ["src/utils"],
-			"@infra": ["src/infra"]
+			"@infra": ["src/infra"],
+			"@services": ["src/services"]
 		}
 	}
 }
