--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:react/recommended",
-		"prettier"
+		"prettier",
+		"plugin:@tanstack/eslint-plugin-query/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
