--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@react-navigation/native": "^6.1.9",
 		"@react-navigation/native-stack": "^6.9.17",
 		"@shopify/restyle": "^2.4.2",
+		"@tanstack/react-query": "^5.17.15",
 		"axios": "^1.6.2",
 		"date-fns": "^3.2.0",
 		"react": "18.2.0",
@@ -33,6 +34,7 @@
 		"@babel/preset-env": "^7.20.0",
 		"@babel/runtime": "^7.20.0",
 		"@react-native/metro-config": "^0.72.11",
+		"@tanstack/eslint-plugin-query": "^5.17.7",
 		"@tsconfig/react-native": "^3.0.0",
 		"@types/react": "^18.0.24",
 		"@types/react-test-renderer": "^18.0.0",
