--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react": "18.2.0",
 		"react-hook-form": "^7.43.9",
 		"react-native": "0.72.6",
+		"react-native-mmkv": "^2.11.0",
 		"react-native-safe-area-context": "^4.7.4",
 		"react-native-screens": "^3.27.0",
 		"react-native-svg": "^13.14.0",
