--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 			"@types": ["src/types"],
 			"@utils": ["src/utils"],
 			"@infra": ["src/infra"],
-			"@services": ["src/services"]
+			"@services": ["src/services"],
+			"testUtils": ["src/tests/testUtils"]
 		}
 	}
 }
