--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-native-safe-area-context": "^4.7.4",
 		"react-native-screens": "^3.27.0",
 		"react-native-svg": "^13.14.0",
+		"ts-node": "^10.9.2",
 		"zod": "^3.22.4",
 		"zustand": "^4.4.7"
 	},
@@ -53,6 +54,7 @@
 		"husky": "^8.0.3",
 		"jest": "^29.2.1",
 		"metro-react-native-babel-preset": "0.76.8",
+		"msw": "^2.1.4",
 		"prettier": "^2.8.8",
 		"react-test-renderer": "18.2.0",
 		"typescript": "4.8.4"
