--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tanstack/react-query": "^4",
 		"axios": "^1.6.2",
 		"date-fns": "^3.2.0",
+		"lodash": "^4.17.21",
 		"react": "18.2.0",
 		"react-hook-form": "^7.43.9",
 		"react-native": "0.72.6",
@@ -40,6 +41,7 @@
 		"@testing-library/react-native": "^12.4.3",
 		"@tsconfig/react-native": "^3.0.0",
 		"@types/jest": "^29.5.11",
+		"@types/lodash": "^4.14.202",
 		"@types/react": "^18.0.24",
 		"@types/react-test-renderer": "^18.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.11.0",
